# griffe-fieldz

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
src/griffe_fieldz/: __init__.py  _extension.py  _repr.py
tests/: fake_module.py  fake_module_runtime.py  test_griffe_fieldz.py
